<resources>
    <string name="app_name">Login con MVP Sociedad Androide</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="clean_firestore_login">CLEAN FIRESTORE LOGIN</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup">SIGNUP</string>
    <string name="not_an_accouunt_yet_register">Not an accouunt yet? Register</string>
    <string name="login">LOGIN</string>
    <string name="send">SEND RECOVER EMAIL</string>
    <string name="password_recover">Password Recover</string>
    <string name="notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>

</resources>
